# pi-birdcam

./: .env.example  .gitignore  CLAUDE.md  README.md  meisencam.py  movedetection.py  pyproject.toml  testcam.py
.claude/: settings.local.json
pub_keys/: id_ed.pub  id_ed25519.pub
src/meisencam/: __main__.py  camera.py  config.py  motion.py  upload.py
tests/: test_main.py  test_motion.py  test_upload.py
