[project]
name = "meisencam"
version = "0.1.0"
description = "Raspberry Pi bird camera with motion detection and Nextcloud upload"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "Pillow",
]

[project.scripts]
meisencam = "meisencam.__main__:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meisencam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
